Fix bad align style on cart item

--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -14,6 +14,7 @@
         flex-direction: column;
         justify-content: space-between;
         height: 60px;
+        width: 100%;
         .name {
             font-weight: bold;
             text-align: left;
